--- a/Loading_Data_and_Initial_Quality_Check/lesson.yaml
+++ b/Loading_Data_and_Initial_Quality_Check/lesson.yaml
@@ -6,7 +6,30 @@
   Organization:
   Version: 2.4.5
 
+#Install packages
 
+- Class: text
+  Output: Before we begin with your class of choice, let's take a quick look at how to download and install R and Bioconductor packages.
+  
+- Class: text
+  Output: Packages are units of shareable R code and contain predefined functions. Loading and installing these packages allows us to use these (often elaborate) functions and not having to write our own for the same purpose.
+
+- Class: text
+  Output: Bioconductor is a open source and open development software project for the analysis of genomic/high throughput datasets. The project is based mostly on R packages.  
+
+- Class: cmd_question
+  Output: The Bioconductor project uses a different installer/manager for their packages. So, in case it is not installed yet, we will do that. Use what you just learned to install the R package "BiocManager"
+  CorrectAnswer: install.packages("BiocManager")
+  AnswerTests: omnitest(correctExpr='install.packages("BiocManager")')
+  Hint: Try typing install.packages("BiocManager")
+  
+ # this one is a little iffy on my computer
+- Class: cmd_question
+  Output: With the BiocManager package installed, we can now install Bioconductor packages. Type BiocManager::install("Seurat") to install the Bioconductor package Seurat.
+  CorrectAnswer: BiocManager::install("Seurat")
+  AnswerTests: omnitest(correctExpr='BiocManager::install("Seurat")')
+  Hint: You might want to read the question again.  
+  
 #Load data in 10X Format
 
 - Class: text
@@ -16,7 +39,7 @@
   Output: These files contain the gene names, the cell barcodes, and a counts matrix that is associated with the previous 2 files. These will all be located in one folder. 
   
 - Class: cmd_question
-  Output: Before we begin, let's load the Seurat R package. This is a popular package for analyzing Single Cell data in R, and what we will be primarily using for this course
+  Output: Before we begin, let's load the Seurat package. This is a popular package for analyzing Single Cell data in R, and what we will be primarily using for this course
   CorrectAnswer: library(Seurat)
   AnswerTests: omnitest(correctExpr='library(Seurat)')
   Hint: Use the library() function with the package Seurat
